2018-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Sanitize claimed profile size
	before allocating memory for it.  Fixes oss-fuzz 11781
	"graphicsmagick/coder_MIFF_fuzzer: Out-of-memory in
	graphicsmagick_coder_MIFF_fuzzer". (Credit to OSS-Fuzz)

2018-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): Fix non-terminal MNG looping.
	Fixes oss-fuzz 11596 "graphicsmagick/coder_MNG_fuzzer: Timeout in
	graphicsmagick_coder_MNG_fuzzer". (Credit to OSS-Fuzz)

2018-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (WriteXPMImage): Assure that added colormap entry
	for transparent XPM is initialized. Fixes oss-fuzz 11617
	"graphicsmagick/coder_XPM_fuzzer: Use-of-uninitialized-value in
	QueryColorname". (Credit to OSS-Fuzz)

	* coders/miff.c (ReadMIFFImage): Fix memory leak of profiles
	'name' when claimed length is zero.  Fixes oss-fuzz 11710
	"graphicsmagick/coder_MIFF_fuzzer: Direct-leak in AllocateString".
	and oss-fuzz 11688 "graphicsmagick/coder_MIFF_fuzzer:
	Out-of-memory in graphicsmagick_coder_MIFF_fuzzer". (Credit to
	OSS-Fuzz)

2018-12-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Apply patch from Alex Gaynor to add
	Zstd to the oss-fuzz build.

2018-12-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac (DcrawExtraOptions): For QuantumDepth > 8 pass -6
	option to dcraw.  Fixes SourceForge issue #568 "dcraw not
	returning 16 bit image even though quantum depth is set to 16".

	* fuzzing/oss-fuzz-build.sh (PKG_CONFIG_PATH): Build WebP prior to
	libtiff so that libtiff has a chance to find it.

2018-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (TimeImageCommand): Time command now shows 6
	digits of elapsed time indication since this precision is often
	now available and it is useful to see.

2018-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
