@@ -35,6 +35,8 @@ int main( int /*argc*/, char ** argv)
 
     // Common font to use.
     string font = "Helvetica";
+    if (getenv("MAGICK_FONT") != 0)
+      font = string(getenv("MAGICK_FONT"));
 
     int x = 100;
     int y = 100;
