@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020181208"
-#define public MagickPackageReleaseDate "snapshot-20181208"
+#define public MagickPackageVersionAddendum ".020181209"
+#define public MagickPackageReleaseDate "snapshot-20181209"
