@@ -155,7 +155,8 @@ available as</p>
 <p><a class="reference external" href="http://sourceforge.net/projects/ghostscript/">http://sourceforge.net/projects/ghostscript/</a></p>
 </blockquote>
 <p>to read the Postscript or the Portable Document Format (PDF).</p>
-<p>Ghostscript Fonts are available from</p>
+<p>Ghostscript Fonts (also known as &quot;URW Standard postscript fonts
+(cyrillicized)&quot;) are available from</p>
 <blockquote>
 <p><a class="reference external" href="https://sourceforge.net/projects/gs-fonts/">https://sourceforge.net/projects/gs-fonts/</a></p>
 </blockquote>
